# python_container

./: Dockerfile  docker-compose.yml  notebook.ipynb  pyproject.toml
