[tool.poetry]
name = "main"
version = "0.1.0"
description = ""
authors = ["Jose <jduarte@amyris.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "1.1.2"
pandas = "1.5.0"
seaborn = "0.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
jupyterlab = "^3.4.3"

[tool.pytest.ini_options]
pythonpath = [".", "./src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
